<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Names-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">
                <EditText
                    android:id="@+id/EditFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstName"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textColor="@color/color_disable_text"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <!--Last Name-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                >
                <EditText
                    android:id="@+id/EditLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastName"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textColor="@color/color_disable_text"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <!--Email -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/Edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:textColor="@color/color_disable_text"
                    android:textColorHint="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>
            <!--Password-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/Edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textColor="@color/color_disable_text"
                    android:textColorHint="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>
            <!--Confirm Password-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/Edit_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textColor="@color/color_disable_text"
                    android:textColorHint="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

            <!--Email -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/Edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_phone"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:textColor="@color/color_disable_text"
                    android:textColorHint="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkbox_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/str_sure_update" />

        <Button
            android:id="@+id/btnupdate"
            style="@style/MyCommonButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/update_info_user" />

    </LinearLayout>
</ScrollView>